# agent-harness-generator

./: CHANGELOG.md  Cargo.toml  README.md  package-lock.json  rust-toolchain.toml
.claude-plugin/: plugin.json
.codex/skills/create-harness/: skill.toml
.codex/skills/harness-secrets/: README.md  skill.toml
.github/workflows/: publish.yml  published-smoke.yml  security.yml
.harness/: federation.json
__tests__/: agent-harness-generator-lib.test.ts  codex-skills.test.ts  e2e-lifecycle.test.ts  e2e-scaffold-validate.test.ts  harness-oia-manifest.test.ts  openharness-subcommands.test.ts  sbom.test.ts  validate-gcp-secrets.test.ts
apps/web-ui/src/: App.tsx
crates/kernel/: build.rs
docs/: OVERVIEW.md  USAGE.md
docs/adrs/: ADR-023-repo-to-harness-importer.md  ADR-024-studio-and-verify.md  ADR-027-cli-and-web-ui-integration.md  ADR-038-draco-beyond-sota-ruflo-components.md  ADR-040-adaptive-cost-optimal-routing.md  ADR-041-metaharness-as-program-synthesis.md  ADR-042-beta-feedback-credibility-reconciliation.md  ADR-086-darwin-efficiency-aware-selection.md  ADR-092-darwin-active-niche-steering.md  ADR-104-darwin-sibling-diversity-nonce.md  ADR-108-darwin-evolution-series-synthesis.md  ADR-117-darwin-swe-nucleus-real-multifile.md  ADR-120-darwin-swe-loop-on-real-package-code.md  ADR-124-darwin-gitapply-patch-primitive.md  ADR-125-darwin-consolidated-swe-runner.md  ADR-140-darwin-mapelites-crossover-capstone.md  ADR-141-darwin-capability-discriminating-capstone.md  INDEX.md
scripts/: healthcheck.mjs  propagate-plugin-manifest.mjs  sbom.mjs  validate-gcp-secrets.mjs
(+24 files in other folders)
